--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ byteorder = "1.5.0"
 clap = { version = "4.5.16", features = ["derive"] }
 color-print = "0.3.6"
 num_enum = "0.7.3"
+thiserror = "1.0.65"
