--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hkscdis-rs"
 description = "A HavokScript 5.1 disassembler written in Rust."
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 license = "GPL-3.0-only"
 keywords = ["hksc", "hkscdis", "havok", "havokscript", "disassembler"]
@@ -11,6 +11,6 @@ repository = "https://github.com/Surasia/hkscdis-rs"
 bitflags = "2.6.0"
 byteorder = "1.5.0"
 clap = { version = "4.5.16", features = ["derive"] }
-color-print = "0.3.6"
+colored = "2.1.0"
 num_enum = "0.7.3"
 thiserror = "1.0.65"
