--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "hkscdis-rs"
 description = "A HavokScript 5.1 disassembler written in Rust."
-version = "0.3.0"
-edition = "2021"
+version = "0.4.0"
+edition = "2024"
 license = "GPL-3.0-only"
 keywords = ["hksc", "hkscdis", "havok", "havokscript", "disassembler"]
 repository = "https://github.com/Surasia/hkscdis-rs"
+categories = ["reverse-engineering", "game-hacking"]
 
 [dependencies]
-bitflags = "2.6.0"
+bitflags = "2.8.0"
 byteorder = "1.5.0"
-clap = { version = "4.5.16", features = ["derive"] }
-colored = "2.1.0"
+clap = { version = "4.5.30", features = ["derive"] }
+colored = "3.0.0"
 num_enum = "0.7.3"
-thiserror = "1.0.65"
+thiserror = "2.0.11"
